# ArchiveIT

./: .gitignore  CMakeLists.txt  README.md  diagrama.puml  main.cpp
assets/: diagrama.puml
include/: Adapter.h  Archivator.h  Archiver.h  Benchmark.h  Compressor.h  FileManager.h  InfoManager.h  Interface.h  Logger.h
include/implementations/: HuffmanCompression.h  IoPair.h
src/: Adapter.cpp  Archivator.cpp  Archiver.cpp  Benchmark.cpp  Compressor.cpp  FileManager.cpp  Interface.cpp
src/implementations/: LZ77Compression.h  LZ78Comprassion.h
utils/: bytes_convertor.cpp  bytes_convertor.h  file_operations.cpp  file_operations.h  time_to_string.cpp  time_to_string.h
utils/containers/: Stack.cpp  Stack.h
utils/implementations/: HuffmanCompression.h
utils/structures/: HuffmanNode.h  Node.h
